# hssqlppp

./: README  hssqlppp-selects.cabal  hssqlppp.cabal
docs/: TODO
docs/website/: index.txt
src/Database/HsSqlPpp/: Annotation.lhs  Ast.lhs  Parser.lhs  Pretty.lhs  PrettyPrinter.lhs  TypeChecker.lhs
src/Database/HsSqlPpp/AstInternals/: AnnotationUtils.lhs  AstAnnotation.lhs  AstInternal.ag  AstInternal.hs  TypeType.lhs
src/Database/HsSqlPpp/AstInternals/TypeChecking/: CanonicaliseIdentifiers.ag
src/Database/HsSqlPpp/Internals/: AstInternal.ag  AstInternal.hs
src/Database/HsSqlPpp/Internals/TypeChecking/: FixUpIdentifiers.ag
src/Database/HsSqlPpp/Internals/TypeChecking/QueryExprs/: QueryStatement.ag  TableRefs.ag
src/Database/HsSqlPpp/Parsing/: Lexer.lhs  ParserInternal.lhs
tests/: Tests.lhs
tests/Database/HsSqlPpp/Tests/: Here.lhs  Tests.lhs
tests/Database/HsSqlPpp/Tests/Parsing/: ParsingTests.lhs
tests/Database/HsSqlPpp/Tests/TypeChecking/: Identifiers.lhs  TypeChecking.lhs
