Name:                hssqlppp-selects
Version:             0.3.0
Synopsis:            SQL parser and typechecker
License:             BSD3
License-file:        LICENSE
Author:              Jake Wheat
Maintainer:          jakewheatmail@gmail.com
Build-Type:          Simple
Cabal-Version:       >=1.6
copyright:           Copyright 2009, 2010 Jake Wheat
stability:           pre-alpha
homepage:            http://community.haskell.org/~JakeWheat/hssqlppp/index.html
bug-reports:         mailto:jakewheatmail@gmail.com
category:            Database
Description:

    A parser, pretty printer and type checker for SQL select
    statements. Supports PostgreSQL SQL syntax.
    .
    Documentation, examples on the homepage:
    <http://community.haskell.org/~JakeWheat/hssqlppp/index.html>.

extra-source-files:  README
                     LICENSE
                     -- todo: add website stuff
                     --find src/ devel/ tests/ examples/ -iname '*.ag' -o -iname '.sql' -o -iname '*.txt' -o -iname '*.hs' -o -iname '*.lhs'
                     src/index.txt
                     src/Database/HsSqlPpp/Ast.lhs
                     src/Database/HsSqlPpp/PrettyPrinter.lhs
                     src/Database/HsSqlPpp/TypeChecker.lhs
                     src/Database/HsSqlPpp/Annotation.lhs
                     src/Database/HsSqlPpp/Utils/DbmsCommon.lhs
                     src/Database/HsSqlPpp/Utils/Utils.lhs
                     src/Database/HsSqlPpp/Utils/Here.lhs
                     src/Database/HsSqlPpp/SqlTypes.lhs
                     src/Database/HsSqlPpp/Parser.lhs
                     src/Database/HsSqlPpp/Parsing/ParseErrors.lhs
                     src/Database/HsSqlPpp/Parsing/Lexer.lhs
                     src/Database/HsSqlPpp/Catalog.lhs
                     src/Database/HsSqlPpp/AstInternals/Catalog/CatalogReaderY.lhs
                     src/Database/HsSqlPpp/AstInternals/Catalog/CatalogInternal.lhs
                     src/Database/HsSqlPpp/AstInternals/Catalog/CatalogReader.lhs
                     src/Database/HsSqlPpp/AstInternals/Catalog/DefaultTemplate1Catalog.lhs
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Drops.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Expressions.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/CreateFunction.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Update.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/TypeConversion.lhs
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Plpgsql.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/ErrorUtils.lhs
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Misc.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/TableRefs.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Statements.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Block.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Insert.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Triggers.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/SelectLists.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/LocalBindings.lhs
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/Delete.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/MiscCreates.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/CreateTable.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/LocalBindingsInternal.lhs
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/TypeChecking.ag
                     src/Database/HsSqlPpp/AstInternals/TypeChecking/SelectStatement.ag
                     src/Database/HsSqlPpp/AstInternals/AstAnnotation.lhs
                     src/Database/HsSqlPpp/AstInternals/AnnotationUtils.lhs
                     src/Database/HsSqlPpp/AstInternals/AstInternal.hs
                     src/Database/HsSqlPpp/AstInternals/TypeType.lhs
                     src/Database/HsSqlPpp/AstInternals/AstInternal.ag
                     devel/index.txt
                     tests/Tests.lhs
                     tests/index.txt
                     tests/Database/HsSqlPpp/Tests/Tests.lhs
                     tests/Database/HsSqlPpp/Tests/TypeChecking/Identifiers.lhs
                     tests/Database/HsSqlPpp/Tests/Parsing/ParsingTests.lhs


Flag tests
  Description:       Build the tests
  Default:           False
Flag postgres
  Description:       Use HDBC-postgresql (disable to remove postgresql dependency)
  Default:           True

Flag quasiquotes
  Description:       Compile quasi quote support (disable to remove template-haskell dependency)
  Default:           True


source-repository head
  type:     bzr
  location: https://launchpad.net/+branch/~jakewheat/hssqlppp/trunk

Library
  Build-Depends:     base >= 4 && < 5,
                     uniplate >= 1.6 && < 1.7,
                     mtl >= 2.0.1.0 && < 2.1,
                     parsec >= 3.1 && < 3.2,
                     pretty >= 1.0.1.1 && < 1.1,
                     transformers >= 0.2.2.0 && < 0.3
  hs-source-dirs:    src

  Exposed-modules:   Database.HsSqlPpp.Ast
                     Database.HsSqlPpp.Annotation
                     Database.HsSqlPpp.Catalog
                     Database.HsSqlPpp.Parser
                     Database.HsSqlPpp.PrettyPrinter
                     Database.HsSqlPpp.SqlTypes
                     Database.HsSqlPpp.TypeChecker

                     -- find src -iname '*hs' | sed -e "s@src/@@" | sed -e "s@/@.@g" |sed -e "s/.lhs//" |sed -e "s/.hs//"
  Other-Modules:     Database.HsSqlPpp.Utils.Utils
                     Database.HsSqlPpp.Parsing.ParseErrors
                     Database.HsSqlPpp.Parsing.Lexer
                     Database.HsSqlPpp.AstInternals.Catalog.CatalogInternal
                     Database.HsSqlPpp.AstInternals.Catalog.DefaultTemplate1Catalog
                     Database.HsSqlPpp.AstInternals.TypeChecking.TypeConversion
                     Database.HsSqlPpp.AstInternals.AstAnnotation
                     Database.HsSqlPpp.AstInternals.AnnotationUtils
                     Database.HsSqlPpp.AstInternals.AstInternal
                     Database.HsSqlPpp.AstInternals.TypeType

  extensions:        DeriveDataTypeable,
                     RankNTypes,
                     ScopedTypeVariables,
                     FlexibleContexts,
                     ExistentialQuantification,
                     CPP,
                     PatternGuards

Executable Tests
  Main-Is:           Tests.lhs
  hs-source-dirs:    src,devel,tests
  if flag(tests)
    Build-Depends:   base >= 4 && < 5,
                     mtl >= 2.0.1.0 && < 2.1,
                     containers >= 0.3.0.0 && < 0.4,
                     parsec >= 3.1 && < 3.2,
                     pretty >= 1.0.1.1 && < 1.1,
                     syb >= 0.1.0.2 && < 0.2,
                     uniplate >= 1.6 && < 1.7,
                     transformers >= 0.2.2.0 && < 0.3,
                     test-framework >= 0.3.3 && < 0.4,
                     haskell-src-exts >= 1.9.6 && < 1.10,
                     test-framework-hunit >= 0.2.6 && < 0.3,
                     HUnit >= 1.2.2.3 && < 1.3,
                     template-haskell >= 2.4.0.0 && < 2.5
  else
    Build-Depends:   base >= 4 && < 5

  if flag(tests)
    Buildable:       True
  else
    Buildable:       False

  extensions:        DeriveDataTypeable,
                     RankNTypes,
                     ScopedTypeVariables,
                     FlexibleContexts,
                     ExistentialQuantification,
                     CPP,
                     PatternGuards
